src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@llvm14_tket.quantum.QAlloc.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private %Qubit* @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call %Qubit* @__quantum__rt__qubit_allocate()
  ret %Qubit* %0
}

declare %Qubit* @__quantum__rt__qubit_allocate()
