src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@llvm14_tket.quantum.Ry.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private %Qubit* @_hl.main.1(%Qubit* %0, double %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__qis__ry__body(double %1, %Qubit* %0)
  ret %Qubit* %0
}

declare void @__quantum__qis__ry__body(double, %Qubit*)
